Execute autoload dump

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ php:
 before_script:
     - composer self-update
     - composer install --no-interaction
+    - composer dumpautoload -o
     - pip install --user codecov
 script: vendor/bin/phpunit -c test/phpunit.xml
 after_success:
