--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
 	"minimum-stability": "stable",
 	"require": {},
 	"require-dev": {
-		"phpunit/phpunit": "4.8.x-dev",
+		"phpunit/phpunit": "4.8.24",
 		"phpunit/phpunit-skeleton-generator": "2.0.1"
 	}
 }
