--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,12 @@
 		}
 	},
 	"minimum-stability": "stable",
-	"require": {},
+	"require": {
+		"php": ">=5.4.0"
+	},
 	"require-dev": {
 		"phpunit/phpunit": "4.8.24",
-		"phpunit/phpunit-skeleton-generator": "2.0.1"
+		"phpunit/phpunit-skeleton-generator": "2.0.1",
+		"codacy/coverage": "dev-master"
 	}
 }
