--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -20,10 +20,8 @@
         </whitelist>
     </filter>
     <logging>
-        <log type="tap" target="build/report.tap"/>
-        <log type="junit" target="build/report.junit.xml"/>
-        <log type="coverage-html" target="build/coverage" charset="UTF-8" yui="true" highlight="true"/>
-        <log type="coverage-text" target="build/coverage.txt"/>
-        <log type="coverage-clover" target="build/logs/clover.xml"/>
+        <log type="junit" target="build/logs/junit_unit.xml"/>
+        <log type="coverage-clover" target="build/logs/coverage.xml"/>
+        <log type="coverage-html" target="build/logs/html"/>
     </logging>
 </phpunit>
