--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Pachico\\Magoo\\": "tests/"
+            "Pachico\\MagooTest\\": "tests/"
         }
     },
     "minimum-stability": "stable",
@@ -46,8 +46,7 @@
     "require-dev": {
         "phpunit/phpunit": "^4.8",
         "codacy/coverage": "dev-master",
-        "squizlabs/php_codesniffer": "^2.7",
-        "monolog/monolog": "^1.19"
+        "squizlabs/php_codesniffer": "^2.7"
     },
     "config": {
         "sort-packages": true
